--- a/settings.json
+++ b/settings.json
@@ -1,15 +1,15 @@
 {
      "prefix": "!",
-     "namalu" : "𝗗𝗜𝗧𝗧𝗔𝗭",
-     "nomerlu": "6285156137901",
+     "namalu" : "Saya bukan owner",
+     "nomerlu": "6285159088173",
      "namabot": "AMELIA BOTZ",
-     "nomerbot": "62895615510206",
+     "nomerbot": "14849353068",
      "gender" : "FEMALE",
      "copyright" : "Extream",
-     "Shopee" : "085156137901",
-     "Gopay" : "085156137901",
-     "Dana" : "085156137901",
-     "Ovo" : "085156137901",
+     "Shopee" : "0",
+     "Gopay" : "0",
+     "Dana" : "0",
+     "Ovo" : "0",
      "Antidel": false,
      "Anticall": true,
      "multi": false,
