--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
      "prefix": "!",
-     "namalu" : "Saya bukan owner",
+     "namalu" : "Alvaro",
      "nomerlu": "6285159088173",
-     "namabot": "AMELIA BOTZ",
+     "namabot": "ALVARO BOTZ",
      "nomerbot": "14849353068",
      "gender" : "FEMALE",
      "copyright" : "Extream",
